--- a/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
@@ -171,7 +171,14 @@
     <ClInclude Include="include\vmath.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="src\Demo\Demo1.h" />
+    <ClInclude Include="src\GUtil\GUtil.h" />
     <ClInclude Include="src\IO\FileIO.h" />
+    <ClInclude Include="src\Learn3D\Mathf.h" />
+    <ClInclude Include="src\Learn3D\Matrix4x4.h" />
+    <ClInclude Include="src\Learn3D\Quaternion.h" />
+    <ClInclude Include="src\Learn3D\Test3DMath.h" />
+    <ClInclude Include="src\Learn3D\Vector3.h" />
+    <ClInclude Include="src\Learn3D\Vector4.h" />
     <ClInclude Include="src\LearnOpengl\ShaderHelper.h" />
     <ClInclude Include="src\LearnOpengl\ApplicationBase.h" />
   </ItemGroup>
@@ -185,6 +192,10 @@
     </ClCompile>
     <ClCompile Include="src\GL\gl3w.c" />
     <ClCompile Include="src\IO\FileIO.cpp" />
+    <ClCompile Include="src\Learn3D\Mathf.cpp" />
+    <ClCompile Include="src\Learn3D\Test3DMath.cpp" />
+    <ClCompile Include="src\Learn3D\Vector3.cpp" />
+    <ClCompile Include="src\Learn3D\Vector4.cpp" />
     <ClCompile Include="src\LearnOpengl\ShaderHelper.cpp" />
     <ClCompile Include="src\LearnOpengl\ApplicationBase.cpp" />
     <ClCompile Include="src\sb7\sb7.cpp" />
