--- a/learnCppProject/LearnCppProject/Math3d/Math3d.csproj
+++ b/learnCppProject/LearnCppProject/Math3d/Math3d.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Color.cs" />
     <Compile Include="Debug.cs" />
     <Compile Include="Mathf.cs" />
     <Compile Include="Matrix4x4.cs" />
