--- a/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
@@ -171,6 +171,7 @@
     <ClInclude Include="include\vmath.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="src\Demo\Demo1.h" />
+    <ClInclude Include="src\Graphic\Color.h" />
     <ClInclude Include="src\GUtil\GUtil.h" />
     <ClInclude Include="src\IO\FileIO.h" />
     <ClInclude Include="src\Learn3D\Mathf.h" />
@@ -191,6 +192,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="src\GL\gl3w.c" />
+    <ClCompile Include="src\Graphic\Color.cpp" />
     <ClCompile Include="src\IO\FileIO.cpp" />
     <ClCompile Include="src\Learn3D\Mathf.cpp" />
     <ClCompile Include="src\Learn3D\Test3DMath.cpp" />
