--- a/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="src\Demo\Demo1.h" />
     <ClInclude Include="src\Demo\Demo2.h" />
+    <ClInclude Include="src\Demo\Demo3.h" />
     <ClInclude Include="src\Graphic\Color.h" />
     <ClInclude Include="src\GUtil\GUtil.h" />
     <ClInclude Include="src\IO\FileIO.h" />
