--- a/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="src\Demo\Demo1.h" />
     <ClInclude Include="src\Demo\Demo2.h" />
     <ClInclude Include="src\Demo\Demo3.h" />
+    <ClInclude Include="src\Demo\Demo4.h" />
     <ClInclude Include="src\Graphic\Color.h" />
     <ClInclude Include="src\GUtil\GUtil.h" />
     <ClInclude Include="src\IO\FileIO.h" />
