--- a/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="src\Demo\Demo4.h" />
     <ClInclude Include="src\Demo\Demo5.h" />
     <ClInclude Include="src\Demo\Demo6.h" />
+    <ClInclude Include="src\Demo\Demo7.h" />
     <ClInclude Include="src\GL\GLUtil.h" />
     <ClInclude Include="src\Graphic\Color.h" />
     <ClInclude Include="src\Graphic\PNGHelper.h" />
