--- a/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj.filters
+++ b/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClInclude Include="src\Graphic\PNGHelper.h">
       <Filter>源文件\src\Graphic</Filter>
     </ClInclude>
+    <ClInclude Include="src\Demo\Demo7.h">
+      <Filter>源文件\src\Demo</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
