--- a/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj.filters
+++ b/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClInclude Include="src\Demo\Demo8.h">
       <Filter>源文件\src\Demo</Filter>
     </ClInclude>
+    <ClInclude Include="src\Demo\Demo9.h">
+      <Filter>源文件\src\Demo</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
