--- a/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj.filters
+++ b/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj.filters
@@ -168,6 +168,9 @@
     <ClInclude Include="src\GL\MeshFiler.h">
       <Filter>源文件\src\GL</Filter>
     </ClInclude>
+    <ClInclude Include="src\Demo\Demo12.h">
+      <Filter>源文件\src\Demo</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
