--- a/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj.filters
+++ b/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj.filters
@@ -165,9 +165,6 @@
     <ClInclude Include="src\Demo\Demo11.h">
       <Filter>源文件\src\Demo</Filter>
     </ClInclude>
-    <ClInclude Include="src\GL\MeshFiler.h">
-      <Filter>源文件\src\GL</Filter>
-    </ClInclude>
     <ClInclude Include="src\Demo\Demo12.h">
       <Filter>源文件\src\Demo</Filter>
     </ClInclude>
@@ -179,6 +176,9 @@
     </ClInclude>
     <ClInclude Include="src\Demo\Demo15.h">
       <Filter>源文件\src\Demo</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GL\Obj.h">
+      <Filter>源文件\src\GL</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
