添加加载obj类

--- a/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{491A2FC1-B9A9-4D13-A240-E6832F4A1604}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>LearnOpenGL</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -189,6 +189,8 @@
     <ClInclude Include="src\GL\GLUtil.h" />
     <ClInclude Include="src\GL\Obj.h" />
     <ClInclude Include="src\Graphic\Color.h" />
+    <ClInclude Include="src\Graphic\MeshData.h" />
+    <ClInclude Include="src\Graphic\ObjFileHelper.h" />
     <ClInclude Include="src\Graphic\PNGHelper.h" />
     <ClInclude Include="src\GUtil\GUtil.h" />
     <ClInclude Include="src\IO\FileIO.h" />
@@ -214,6 +216,7 @@
     <ClCompile Include="src\GL\gl3w.c" />
     <ClCompile Include="src\GL\GLUtil.cpp" />
     <ClCompile Include="src\Graphic\Color.cpp" />
+    <ClCompile Include="src\Graphic\ObjFileHelper.cpp" />
     <ClCompile Include="src\IO\FileIO.cpp" />
     <ClCompile Include="src\Learn3D\Mathf.cpp" />
     <ClCompile Include="src\Learn3D\Test3DMath.cpp" />
