--- a/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj.filters
+++ b/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj.filters
@@ -144,9 +144,6 @@
     <ClInclude Include="src\Demo\Demo6.h">
       <Filter>源文件\src\Demo</Filter>
     </ClInclude>
-    <ClInclude Include="src\GL\GLUtil.h">
-      <Filter>源文件\src\GL</Filter>
-    </ClInclude>
     <ClInclude Include="src\Graphic\PNGHelper.h">
       <Filter>源文件\src\Graphic</Filter>
     </ClInclude>
@@ -191,6 +188,9 @@
     </ClInclude>
     <ClInclude Include="src\Graphic\MeshFliter.h">
       <Filter>源文件\src\Graphic</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GL\GLHelper.h">
+      <Filter>源文件\src\GL</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -245,14 +245,14 @@
     <ClCompile Include="src\Graphic\Color.cpp">
       <Filter>源文件\src\Graphic</Filter>
     </ClCompile>
-    <ClCompile Include="src\GL\GLUtil.cpp">
-      <Filter>源文件\src\GL</Filter>
-    </ClCompile>
     <ClCompile Include="src\LearnOpengl\Camera.cpp">
       <Filter>源文件\src\LearnOpengl</Filter>
     </ClCompile>
     <ClCompile Include="src\Graphic\ObjFileHelper.cpp">
       <Filter>源文件\src\Graphic</Filter>
+    </ClCompile>
+    <ClCompile Include="src\GL\GLHelper.cpp">
+      <Filter>源文件\src\GL</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
