--- a/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
@@ -171,6 +171,9 @@
     <ClInclude Include="include\shader.h" />
     <ClInclude Include="include\vmath.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="src\ApplicationBase.h" />
+    <ClInclude Include="src\Camera.h" />
+    <ClInclude Include="src\Color.h" />
     <ClInclude Include="src\Demo\Demo10.h" />
     <ClInclude Include="src\Demo\Demo1.h" />
     <ClInclude Include="src\Demo\Demo11.h" />
@@ -186,14 +189,9 @@
     <ClInclude Include="src\Demo\Demo7.h" />
     <ClInclude Include="src\Demo\Demo8.h" />
     <ClInclude Include="src\Demo\Demo9.h" />
-    <ClInclude Include="src\GL\GLHelper.h" />
-    <ClInclude Include="src\GL\RenderObject.h" />
-    <ClInclude Include="src\Graphic\Color.h" />
-    <ClInclude Include="src\Graphic\MeshFliter.h" />
-    <ClInclude Include="src\Graphic\ObjFileHelper.h" />
-    <ClInclude Include="src\Graphic\PNGHelper.h" />
-    <ClInclude Include="src\GUtil\GUtil.h" />
-    <ClInclude Include="src\IO\FileIO.h" />
+    <ClInclude Include="src\FileIO.h" />
+    <ClInclude Include="src\GLHelper.h" />
+    <ClInclude Include="src\GUtil.h" />
     <ClInclude Include="src\Learn3D\Mathf.h" />
     <ClInclude Include="src\Learn3D\Matrix4x4.h" />
     <ClInclude Include="src\Learn3D\Quaternion.h" />
@@ -201,9 +199,11 @@
     <ClInclude Include="src\Learn3D\Transform.h" />
     <ClInclude Include="src\Learn3D\Vector3.h" />
     <ClInclude Include="src\Learn3D\Vector4.h" />
-    <ClInclude Include="src\LearnOpengl\Camera.h" />
-    <ClInclude Include="src\LearnOpengl\ShaderHelper.h" />
-    <ClInclude Include="src\LearnOpengl\ApplicationBase.h" />
+    <ClInclude Include="src\MeshFliter.h" />
+    <ClInclude Include="src\ObjFileHelper.h" />
+    <ClInclude Include="src\PNGHelper.h" />
+    <ClInclude Include="src\RenderObject.h" />
+    <ClInclude Include="src\ShaderHelper.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LearnOpenGL.cpp" />
@@ -213,24 +213,24 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\ApplicationBase.cpp" />
+    <ClCompile Include="src\Camera.cpp" />
+    <ClCompile Include="src\Color.cpp" />
+    <ClCompile Include="src\FileIO.cpp" />
+    <ClCompile Include="src\GLHelper.cpp" />
     <ClCompile Include="src\GL\gl3w.c" />
-    <ClCompile Include="src\GL\GLHelper.cpp" />
-    <ClCompile Include="src\Graphic\Color.cpp" />
-    <ClCompile Include="src\Graphic\ObjFileHelper.cpp" />
-    <ClCompile Include="src\IO\FileIO.cpp" />
     <ClCompile Include="src\Learn3D\Mathf.cpp" />
     <ClCompile Include="src\Learn3D\Test3DMath.cpp" />
     <ClCompile Include="src\Learn3D\Vector3.cpp" />
     <ClCompile Include="src\Learn3D\Vector4.cpp" />
-    <ClCompile Include="src\LearnOpengl\Camera.cpp" />
-    <ClCompile Include="src\LearnOpengl\ShaderHelper.cpp" />
-    <ClCompile Include="src\LearnOpengl\ApplicationBase.cpp" />
+    <ClCompile Include="src\ObjFileHelper.cpp" />
     <ClCompile Include="src\sb7\sb7.cpp" />
     <ClCompile Include="src\sb7\sb7color.cpp" />
     <ClCompile Include="src\sb7\sb7ktx.cpp" />
     <ClCompile Include="src\sb7\sb7object.cpp" />
     <ClCompile Include="src\sb7\sb7shader.cpp" />
     <ClCompile Include="src\sb7\sb7textoverlay.cpp" />
+    <ClCompile Include="src\ShaderHelper.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
