--- a/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
@@ -186,6 +186,7 @@
     <ClInclude Include="src\Demo\Demo18.h" />
     <ClInclude Include="src\Demo\Demo19.h" />
     <ClInclude Include="src\Demo\Demo2.h" />
+    <ClInclude Include="src\Demo\Demo20.h" />
     <ClInclude Include="src\Demo\Demo3.h" />
     <ClInclude Include="src\Demo\Demo4.h" />
     <ClInclude Include="src\Demo\Demo5.h" />
