--- a/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
@@ -210,6 +210,7 @@
     <ClInclude Include="src\ObjFileHelper.h" />
     <ClInclude Include="src\PNGHelper.h" />
     <ClInclude Include="src\MeshRenderObject.h" />
+    <ClInclude Include="src\RenderTexture.h" />
     <ClInclude Include="src\ResourcesMgr.h" />
     <ClInclude Include="src\SceneRenderMgr.h" />
     <ClInclude Include="src\ShaderHelper.h" />
