--- a/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj.filters
+++ b/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj.filters
@@ -225,6 +225,9 @@
     <ClInclude Include="src\Demo\Demo22.h">
       <Filter>源文件\src\Demo</Filter>
     </ClInclude>
+    <ClInclude Include="src\Demo\Demo23.h">
+      <Filter>源文件\src\Demo</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
