--- a/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/learnCppProject/LearnCppProject/LearnOpenGL/LearnOpenGL.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{491A2FC1-B9A9-4D13-A240-E6832F4A1604}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>LearnOpenGL</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -172,6 +172,8 @@
     <ClInclude Include="include\vmath.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="src\ApplicationBase.h" />
+    <ClInclude Include="src\BoneAnimation.h" />
+    <ClInclude Include="src\BoneWeight.h" />
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Color.h" />
     <ClInclude Include="src\Demo\Demo10.h" />
@@ -197,6 +199,7 @@
     <ClInclude Include="src\Demo\Demo7.h" />
     <ClInclude Include="src\Demo\Demo8.h" />
     <ClInclude Include="src\Demo\Demo9.h" />
+    <ClInclude Include="src\FBXFileHelper.h" />
     <ClInclude Include="src\FileIO.h" />
     <ClInclude Include="src\GLHelper.h" />
     <ClInclude Include="src\GUtil.h" />
@@ -228,6 +231,7 @@
     <ClCompile Include="src\ApplicationBase.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Color.cpp" />
+    <ClCompile Include="src\FBXFileHelper.cpp" />
     <ClCompile Include="src\FileIO.cpp" />
     <ClCompile Include="src\GLHelper.cpp" />
     <ClCompile Include="src\GL\gl3w.c" />
