--- a/learnCppProject/LearnCppProject/Math3d/Math3d.csproj
+++ b/learnCppProject/LearnCppProject/Math3d/Math3d.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Color.cs" />
     <Compile Include="Debug.cs" />
     <Compile Include="Mathf.cs" />
+    <Compile Include="MathHelper.cs" />
+    <Compile Include="Matrix3x3.cs" />
     <Compile Include="Matrix4x4.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
